--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.3",
-    "@angular/cli": "~13.3.3",
+    "@angular/cli": "^13.3.7",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/leaflet": "^1.7.9",
